--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
-{"name":"jsond"
-,"version":"1.0.0"
-,"description":"Implements a simple server for sending and receiving JSON messages over HTTP"
-,"author":"Joe Hitchens <joe@sleepless.com>"
-,"license":{"type":"MIT" ,"url":"https://github.com/sleeplessinc/node-jsond/raw/master/LICENSE"}
-,"main":"jsond.js"
-,"repositories":[{"type":"git","url":"https://sleeplessinc@github.com/sleeplessinc/node-jsond.git"}]
-,"engines":"0.4.0"
+{
+  "name": "jsond",
+  "version": "1.0.0",
+  "description": "Implements a simple server for sending and receiving JSON messages over HTTP",
+  "author": "Joe Hitchens <joe@sleepless.com> (sleepless.com)",
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/sleeplessinc/node-jsond/raw/master/LICENSE"
+  },
+  "main": "jsond",
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://sleeplessinc@github.com/sleeplessinc/node-jsond.git"
+    }
+  ],
+  "engines": {
+    "node": "0.4.0"
+  },
+  "repository": "git://github.com/sleeplessinc/node-jsond.git"
 }
