--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "author": "Joe Hitchens <joe@sleepless.com> (sleepless.com)",
   "license": {
     "type": "MIT",
-    "url": "https://github.com/sleeplessinc/node-jsond/raw/master/LICENSE"
+    "url": "https://github.com/sleeplessinc/jsond/raw/master/LICENSE"
   },
   "main": "jsond",
   "repositories": [
     {
       "type": "git",
-      "url": "https://sleeplessinc@github.com/sleeplessinc/node-jsond.git"
+      "url": "https://sleeplessinc@github.com/sleeplessinc/jsond.git"
     }
   ],
   "engines": {
     "node": "0.4.0"
   },
-  "repository": "git://github.com/sleeplessinc/node-jsond.git"
+  "repository": "git://github.com/sleeplessinc/jsond.git"
 }
